--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.1",
+    "kysely": "^0.27.4",
     "node-firebird": "^1.1.9",
+    "pg": "^8.13.1",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/pg": "^8.11.4",
     "@types/node": "^24.8.1",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
